--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
+/* @import "~antd/dist/antd.css"; */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  margin: 32px;
+}
+
+.card-border {
+  background-color: rgba(191, 194, 194, 0.753);
+  height: 80px;
+}
+
+.ant-card-body {
+  padding: 0px !important;
+}
+
+.question-title {
+  padding: 8px 0;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  font-family: serif;
+}
+
+.p-b {
+  padding-bottom: 8px;
+  margin: 8px;
+}
+
+.button-next {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.m-r {
+  margin-right: 8px;
+  background-color: darkred;
+  font-size: 15px;
+  color: gainsboro;
+  padding: 0 19px;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: baseline;
 }
